@@ -1,0 +1,4 @@
+Automate package and project setup tasks that are otherwise performed
+manually. This includes setting up unit testing, test coverage,
+continuous integration, Git, 'GitHub', licenses, 'Rcpp', 'RStudio'
+projects, and more.
