@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:09:29 brook Exp $
+
+SHA1 (R/usethis_1.5.1.tar.gz) = c901fec8fb37bad37edd2c30fe2bddcfdb981410
+RMD160 (R/usethis_1.5.1.tar.gz) = f7d3d8c409e6dd4ef4e32ca102c93d6e4368739e
+SHA512 (R/usethis_1.5.1.tar.gz) = 5cfc155fc135cf22fade67ea9f9c4f005bbca9f645de46f7e83ec9c69ae838e857bbf801b3181e5d30b8e9e33fe4eca744491bb4fd716e2d17fae27401039a94
+Size (R/usethis_1.5.1.tar.gz) = 620225 bytes
