@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3365 2019/08/09 19:08:33 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3366 2019/08/09 19:09:28 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5488,3 +5488,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-pkgbuild version 1.0.4 [brook 2019-08-09]
 	Added www/R-httr version 1.4.1 [brook 2019-08-09]
 	Added www/R-gh version 1.0.1 [brook 2019-08-09]
+	Added devel/R-usethis version 1.5.1 [brook 2019-08-09]
